# Search_Space_Synthesis_Experiments

./: .gitignore  README.md  createCondaEnv.sh  pyproject.toml  requirements.txt
data/: TrapezoidNet.pth  nonuniform_oscilator.py  ode1_dataset.pth  ode2_dataset.pth  ode3_dataset.pth  ode_v1.py  ode_v3.py  oscilator_dataset.pth  trapezoid_generation.py
data/ode_1_bo_/: starting_points.pkl
data/ode_1_bo__10/: starting_points.pkl
data/ode_1_bo__50/: starting_points.pkl
data/ode_2_bo_/: starting_points.pkl
data/ode_2_bo__10/: starting_points.pkl
data/ode_2_bo__50/: starting_points.pkl
data/ode_3_bo__10/: starting_points.pkl
evaluation/: bo_ref_results.py
experiments/: ode_1_BO_experiment.py  ode_1_BO_experiment_10.py  ode_1_BO_experiment_50.py  ode_1_BO_experiment_with_refinement.py  ode_1_BO_experiment_with_refinement_10.py  ode_1_BO_experiment_with_refinement_50.py  ode_1_surrogat_regression_experiment.py  ode_1_surrogat_regression_experiment_1.py  ode_1_surrogat_regression_experiment_2.py  ode_1_surrogat_regression_experiment_3.py  ode_2_BO_experiment.py  ode_2_BO_experiment_with_refinement.py  ode_3_BO_experiment.py  ode_3_BO_experiment_with_refinement.py  ode_BO_experiment.py  ode_experiment.py  plot_gp.py  trapezoid_net.py  understanding_damg_search_spaces.py
models/: nonuniform_oscilator.pth  ode_v1.pth  ode_v2.pth  ode_v3.pth
synthesis/: advanced_ode_repo.py  labeled_dag.py  labeled_damg.py  nas_bench_101.py  ode_1_repo.py  ode_1_termPreds_repo.py  ode_2_repo.py  ode_3_repo.py  ode_repo.py  ode_with_lte_repo.py  utils.py
(+1 files in other folders)
